--- a/Notebook/Jupyter/path/LLM_LlamaIndex1.ipynb
+++ b/Notebook/Jupyter/path/LLM_LlamaIndex1.ipynb
@@ -18,14 +18,20 @@
     "- [参考](#参考)\n",
     "- [チェック](#チェック)\n",
     "- [チュートリアル](#チュートリアル)\n",
-    "  - [ライブラリ読み込み](#ライブラリ読み込み)\n",
-    "  - [インデックス作成](#インデックス作成)\n",
-    "  - [OpenAI](#OpenAI)\n",
-    "    - [追加のインストレーション](#追加のインストレーション1)\n",
-    "    - [追加のライブラリ読み込み](#追加のライブラリ読み込み1)\n",
-    "  - [ローカルLLM](#ローカルLLM)\n",
-    "    - [追加のインストレーション](#追加のインストレーション2)\n",
-    "    - [追加のライブラリ読み込み](#追加のライブラリ読み込み2)\n",
+    "  - [準備](#準備)\n",
+    "    - [使用する変数](#使用する変数)\n",
+    "    - [インストレーション](#インストレーション)\n",
+    "    - [ライブラリ読み込み](#ライブラリ読み込み)\n",
+    "  - [LLM](#LLM)\n",
+    "    - [OpenAI](#OpenAI)\n",
+    "      - [追加のインストレーション](#追加のインストレーション1)\n",
+    "      - [追加のライブラリ読み込み](#追加のライブラリ読み込み1)\n",
+    "      - [API Keyの確認](#API_Keyの確認)\n",
+    "    - [Ollama](#Ollama)\n",
+    "      - [追加のインストレーション](#追加のインストレーション2)\n",
+    "      - [追加のライブラリ読み込み](#追加のライブラリ読み込み2)\n",
+    "      - [追加のライブラリの設定](#追加のライブラリの設定)\n",
+    "  - [共通](#共通)\n",
     "    - [インデックス作成](#インデックス作成)\n",
     "    - [RAGのRetrieval部](#RAGのRetrieval部)\n",
     "    - [ログの有効化](#ログの有効化)\n",
@@ -127,10 +133,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "755a092e-a3a8-44b2-86e4-73576b7a5c10",
+   "metadata": {},
+   "source": [
+    "### 準備"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "550afdc8-f737-4426-83a6-10be1d75fece",
    "metadata": {},
    "source": [
-    "### 使用する変数"
+    "#### 使用する変数"
    ]
   },
   {
@@ -150,7 +164,7 @@
    "id": "070c5bd2-e782-4418-9e29-21d80e344d7e",
    "metadata": {},
    "source": [
-    "### インストレーション"
+    "#### インストレーション"
    ]
   },
   {
@@ -168,7 +182,7 @@
    "id": "2110f189-d281-4a84-8840-6c1e2e646a48",
    "metadata": {},
    "source": [
-    "### ライブラリ読み込み"
+    "#### ライブラリ読み込み"
    ]
   },
   {
@@ -183,10 +197,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a5f988e3-2447-47b8-897f-aa45146ca501",
+   "metadata": {},
+   "source": [
+    "### LLM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4d889f94-d4b9-43e3-8713-c3e3e1c9abf7",
    "metadata": {},
    "source": [
-    "### OpenAI"
+    "#### OpenAI"
    ]
   },
   {
@@ -194,7 +216,7 @@
    "id": "ba669365-3663-47d2-906b-3839f85b3bc1",
    "metadata": {},
    "source": [
-    "#### 追加のインストレーション1"
+    "##### 追加のインストレーション1"
    ]
   },
   {
@@ -212,7 +234,7 @@
    "id": "2fa3bf94-916f-4e1a-906d-67e58c68f67d",
    "metadata": {},
    "source": [
-    "#### 追加のライブラリ読み込み1"
+    "##### 追加のライブラリ読み込み1"
    ]
   },
   {
@@ -227,10 +249,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e159b24-3b40-450e-b490-ce9ad719a42b",
+   "id": "a80d0f81-1a72-468b-8684-3446cd1fc02c",
    "metadata": {},
    "source": [
-    "#### ..."
+    "##### API_Keyの確認\n",
+    "準備は、OpenAIにログインしてAPIからKeyを取得、カード登録してチャージするだけ。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "404c6053-20bb-404e-8d77-2c9019af2065",
+   "metadata": {},
+   "source": [
+    "```Python\n",
+    "import os\n",
+    "print(os.environ['OPENAI_API_KEY'])\n",
+    "```"
    ]
   },
   {
@@ -238,7 +272,7 @@
    "id": "708855a8-d529-4696-9a80-a7101e2251bc",
    "metadata": {},
    "source": [
-    "### ローカルLLM"
+    "#### Ollama"
    ]
   },
   {
@@ -246,7 +280,7 @@
    "id": "f9453ebc-d6a2-4bd6-bb84-aa833ef54302",
    "metadata": {},
    "source": [
-    "#### 追加のインストレーション2"
+    "##### 追加のインストレーション2"
    ]
   },
   {
@@ -265,27 +299,49 @@
    "id": "227a7303-3110-4536-a8a4-868d61f931d6",
    "metadata": {},
    "source": [
-    "#### 追加のライブラリ読み込み2"
+    "##### 追加のライブラリ読み込み2"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "c0ff2148-c623-46de-8e6c-cc9fd52e8849",
+   "cell_type": "markdown",
+   "id": "e88bc56f-4112-476c-a474-8fa9286fc02d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/seigi/.local/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
    "source": [
+    "```Python\n",
     "from llama_index.embeddings.huggingface import HuggingFaceEmbedding\n",
-    "from llama_index.llms.ollama import Ollama"
+    "from llama_index.llms.ollama import Ollama\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e254e6aa-7aa5-4258-91e4-ec30ef26dd62",
+   "metadata": {},
+   "source": [
+    "##### 追加のライブラリの設定"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16609769-89f7-4f1e-b15e-aede2076556b",
+   "metadata": {},
+   "source": [
+    "```Python\n",
+    "# bge-base embedding model\n",
+    "Settings.embed_model = HuggingFaceEmbedding(model_name=\"BAAI/bge-base-en-v1.5\")\n",
+    "\n",
+    "# ollama\n",
+    "Settings.llm = Ollama(model=\"Llama3\", request_timeout=360.0)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37d9f9bc-43a0-4563-a1fa-f52c0ad109fb",
+   "metadata": {},
+   "source": [
+    "### 共通\n",
+    "以降のコードは、OpenAI・Ollamaで共通になる。"
    ]
   },
   {
@@ -309,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "a6f1625f-1c79-45ab-82b3-abf22bd89d4d",
    "metadata": {},
    "outputs": [],
@@ -330,17 +386,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "16070c37-5f39-4fa9-b910-c4aac63b18e7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# bge-base embedding model\n",
-    "Settings.embed_model = HuggingFaceEmbedding(model_name=\"BAAI/bge-base-en-v1.5\")\n",
-    "\n",
-    "# ollama\n",
-    "Settings.llm = Ollama(model=\"Llama3\", request_timeout=360.0)\n",
-    "\n",
     "index = VectorStoreIndex.from_documents(\n",
     "    documents,\n",
     ")"
@@ -366,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "e50d344b-2dad-4208-b1cf-3ee59d594f56",
    "metadata": {},
    "outputs": [
@@ -374,7 +424,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The author wrote short stories as a starting point for writing essays before college.\n"
+      "The author worked on writing short stories and programming, particularly on an IBM 1401 in 9th grade using an early version of Fortran. Later, with the availability of microcomputers, the author's interest in programming grew, leading to the purchase of a TRS-80 in 1980, where they started writing simple games and programs.\n"
      ]
     }
    ],
@@ -394,21 +444,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "b81c5a0d-73d0-421e-b521-efb2140bcd9f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6a34e190-e18d-4e81-bc92-e1a43eac3dcf",
-   "metadata": {},
-   "source": [
-    "### 共通\n",
-    "以降のコードは、OpenAIやローカルLLMでも共通になる。"
    ]
   },
   {
@@ -440,15 +481,17 @@
    "metadata": {},
    "source": [
     "#### 永続化して実行\n",
-    "前述のコードに、LlamaIndexで言うStoringの概念を追加したもの。\n",
+    "前述のコードに、LlamaIndexで言うStoringの概念を追加したIndexing & Storing版。\n",
     "- 永続化は、Document Store、Vector Store、Index Storeに、Storage Contextを設定する。\n",
     "- 既出の、Loadingの所で、Document Storeから読み出している。\n",
-    "- Indexingでは、Vector Store、Index Storeに書き出し（永続化し）す。"
+    "- Indexingでは、Vector Store、Index Storeに書き出し（永続化し）す。\n",
+    "\n",
+    "OpenAI・Ollamaを切り替える際は、Embeddingが異なるようなので、一度、PERSIST_DIRのIndexを削除する。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "068ddce5-e376-4dc3-8d61-6e81f3237c5c",
    "metadata": {},
    "outputs": [
@@ -456,7 +499,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The author was a beginning writer who started writing short stories at the age of 13 or 14. He tried his hand at programming on the IBM 1401, an early computer used by his school district, and later worked with microcomputers and eventually with computers in general. The author's father bought him a TRS-80, an early personal computer, when he was 18 years old, which marked a turning point in his life as a writer.\n"
+      "The author worked on writing short stories and programming, starting with early attempts on an IBM 1401 in 9th grade using an early version of Fortran. Later on, the author transitioned to working with microcomputers, building simple games and programs on a TRS-80, eventually leading to a deeper interest in programming and technology.\n"
      ]
     }
    ],
@@ -520,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "5a47bc27-2b33-4553-91f9-e915fb491a6c",
    "metadata": {},
    "outputs": [],
@@ -542,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "95965bbe-5f66-4c18-9a6f-7e48b49d63a6",
    "metadata": {},
    "outputs": [],
@@ -582,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "3766526b-fe26-4c74-870d-a065203283b4",
    "metadata": {},
    "outputs": [
@@ -590,12 +633,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "score  0.49789476617458733\n",
-      "id_ 2485d86a-21ce-4a79-928f-5f03fb27ae79\n",
+      "score  0.8108766833727953\n",
+      "id_ ef903a82-4999-448a-b007-452ab00100d5\n",
       "file_name paul_graham_essay.txt\n",
       "------------------------------------------------------\n",
-      "score  0.4837931384404195\n",
-      "id_ 02c1ec16-98a1-4f64-8b82-c602a38d6b37\n",
+      "score  0.804940970839821\n",
+      "id_ 4aa4469e-4ece-4418-94ac-3a824149c490\n",
       "file_name paul_graham_essay.txt\n",
       "------------------------------------------------------\n"
      ]
@@ -630,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "87a52155-129c-414f-989f-ca7925fc9e33",
    "metadata": {},
    "outputs": [],
@@ -656,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "6765b921-58f0-42e5-99a4-70193fceac84",
    "metadata": {},
    "outputs": [],
@@ -690,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "ac161f59-7405-4d10-9243-ca6dd803e911",
    "metadata": {},
    "outputs": [],
@@ -723,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "6ae99bbf-3020-4f09-87c3-b545d3a34250",
    "metadata": {},
    "outputs": [
@@ -731,7 +774,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The author grew up doing writing and programming outside of school, before college. He wrote short stories as one of his main pursuits, but didn't write essays at all in college.\n"
+      "The author worked on writing and programming before college.\n"
      ]
     }
    ],
@@ -751,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "afb429af-c928-48e1-ac80-28687aa0e24c",
    "metadata": {},
    "outputs": [
@@ -759,16 +802,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "score  0.49789476617458733\n",
-      "id_ 2485d86a-21ce-4a79-928f-5f03fb27ae79\n",
+      "score  0.8108766833727953\n",
+      "id_ ef903a82-4999-448a-b007-452ab00100d5\n",
       "file_name paul_graham_essay.txt\n",
       "------------------------------------------------------\n",
-      "score  0.4837931384404195\n",
-      "id_ 02c1ec16-98a1-4f64-8b82-c602a38d6b37\n",
+      "score  0.804940970839821\n",
+      "id_ 4aa4469e-4ece-4418-94ac-3a824149c490\n",
       "file_name paul_graham_essay.txt\n",
       "------------------------------------------------------\n",
-      "score  0.4723278987873163\n",
-      "id_ 9c4f93ed-d11c-4195-8304-59151fdb11ee\n",
+      "score  0.8017418372702448\n",
+      "id_ 79ed1d41-9d29-424d-982f-c33a4358bd0d\n",
       "file_name paul_graham_essay.txt\n",
       "------------------------------------------------------\n"
      ]
@@ -820,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "cb1325b7-caf2-4eea-850d-cd6ad95367e0",
    "metadata": {},
    "outputs": [],
@@ -848,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "964620e0-90be-476e-89a1-eca273e5ab8f",
    "metadata": {},
    "outputs": [],
@@ -868,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "9e75281c-90db-4300-b675-20977629f965",
    "metadata": {},
    "outputs": [],
@@ -891,7 +934,8 @@
    "source": [
     "##### Indexing & Storing\n",
     "Index Store の Storage Context にも Chroma DB を使うので、  \n",
-    "Vector Store の Storage Context を Index Store にも設定する。"
+    "Vector Store の Storage Context を Index Store にも設定する。  \n",
+    "※ OpenAI・Ollamaを切り替える際は、Embeddingが異なるようなので、一度、PERSIST_DIRのIndexを削除する。"
    ]
   },
   {
@@ -925,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "83c24974-e254-4589-98a4-43cc0a6fb5f9",
    "metadata": {},
    "outputs": [],
@@ -965,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "3e1b05a3-8896-40a9-a3a7-4324427515c1",
    "metadata": {},
    "outputs": [
@@ -973,15 +1017,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'll follow the rules.\n",
-      "\n",
-      "The author's question \"What is the meaning of life?\" is a philosophical inquiry that has puzzled thinkers for centuries. However, there is no definitive answer to this question as it depends on individual perspectives and values.\n",
-      "\n",
-      "In his essay, Paul Graham discusses the concept of artificial intelligence (AI) as a means to understand human nature, but also acknowledges that AI itself is still in its infancy and lacks true consciousness or understanding of the world.\n",
-      "\n",
-      "Graham's personal experience with AI is reflective of this broader philosophical debate. He notes that his decision to switch from philosophy to AI was driven by a desire to explore the boundaries of artificial intelligence, which he saw as an opportunity to challenge conventional notions of human existence.\n",
-      "\n",
-      "Ultimately, Graham suggests that the meaning of life may not be something we can pin down or define, but rather a concept that evolves over time through our experiences and interactions with the world around us.\n"
+      "The meaning of life is a philosophical question that has been debated for centuries and varies depending on individual beliefs, values, and perspectives.\n"
      ]
     }
    ],
