--- a/Notebook/Jupyter/path/LLM_LlamaIndex1.ipynb
+++ b/Notebook/Jupyter/path/LLM_LlamaIndex1.ipynb
@@ -40,6 +40,11 @@
     "  - [Queryingのカスタマイズ](#Queryingのカスタマイズ)\n",
     "    - LLMに投げる前にチャンクを確認\n",
     "    - 段階毎のカスタマイズ\n",
+    "  - [Evaluation](#Evaluation)\n",
+    "    - 準備\n",
+    "    - 関連評価\n",
+    "    - 回答評価\n",
+    "    - 検索評価\n",
     "  - [StoringでChromaDBを使用](#StoringでChromaDBを使用)\n",
     "    - 追加のインストレーション3\n",
     "    - 追加のライブラリ読み込み3\n",
@@ -244,7 +249,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# なし"
+    "# 評価の所で使う\n",
+    "from llama_index.llms.openai import OpenAI"
    ]
   },
   {
@@ -253,7 +259,9 @@
    "metadata": {},
    "source": [
     "##### API_Keyの確認\n",
-    "準備は、OpenAIにログインしてAPIからKeyを取得、カード登録してチャージするだけ。"
+    "- 準備は、OpenAIにログインしてAPIからKeyを取得、カード登録してチャージするだけ。\n",
+    "- プログラムから使用できるようにするには、以下の環境変数に、API Keyが設定されていれば良い。\n",
+    "- 冷静に考えると、評価の所でLLMを明示的に指定しているがそれ以外でなんのモデルを使っているか不明。"
    ]
   },
   {
@@ -341,7 +349,8 @@
    "metadata": {},
    "source": [
     "### 共通\n",
-    "以降のコードは、OpenAI・Ollamaで共通になる。"
+    "以降のコードは、OpenAI・Ollamaで共通になる。  \n",
+    "（ただし、評価で使うLLMにはOpenAIを使用）"
    ]
   },
   {
@@ -424,7 +433,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The author worked on writing short stories and programming, particularly on an IBM 1401 in 9th grade using an early version of Fortran. Later, with the availability of microcomputers, the author's interest in programming grew, leading to the purchase of a TRS-80 in 1980, where they started writing simple games and programs.\n"
+      "The author worked on writing short stories and programming, starting with early attempts on an IBM 1401 in 9th grade using an early version of Fortran. Later, the author transitioned to working with microcomputers, building simple games and programs on a TRS-80.\n"
      ]
     }
    ],
@@ -432,24 +441,6 @@
     "query_engine = index.as_query_engine()\n",
     "response = query_engine.query(\"What did the author do growing up?\")\n",
     "print(response)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "db857f30-a3e7-49d9-ba20-1c31c8dfc6a1",
-   "metadata": {},
-   "source": [
-    "##### Evaluation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "b81c5a0d-73d0-421e-b521-efb2140bcd9f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ..."
    ]
   },
   {
@@ -491,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "068ddce5-e376-4dc3-8d61-6e81f3237c5c",
    "metadata": {},
    "outputs": [
@@ -499,7 +490,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The author worked on writing short stories and programming, starting with early attempts on an IBM 1401 in 9th grade using an early version of Fortran. Later on, the author transitioned to working with microcomputers, building simple games and programs on a TRS-80, eventually leading to a deeper interest in programming and technology.\n"
+      "The author worked on writing short stories and programming, particularly on an IBM 1401 in 9th grade using an early version of Fortran. Later, the author got a TRS-80 computer and started programming more extensively, creating simple games, a rocket prediction program, and a word processor.\n"
      ]
     }
    ],
@@ -563,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "5a47bc27-2b33-4553-91f9-e915fb491a6c",
    "metadata": {},
    "outputs": [],
@@ -585,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "95965bbe-5f66-4c18-9a6f-7e48b49d63a6",
    "metadata": {},
    "outputs": [],
@@ -625,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "3766526b-fe26-4c74-870d-a065203283b4",
    "metadata": {},
    "outputs": [
@@ -673,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "87a52155-129c-414f-989f-ca7925fc9e33",
    "metadata": {},
    "outputs": [],
@@ -699,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "6765b921-58f0-42e5-99a4-70193fceac84",
    "metadata": {},
    "outputs": [],
@@ -733,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "ac161f59-7405-4d10-9243-ca6dd803e911",
    "metadata": {},
    "outputs": [],
@@ -766,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "6ae99bbf-3020-4f09-87c3-b545d3a34250",
    "metadata": {},
    "outputs": [
@@ -774,7 +765,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The author worked on writing and programming before college.\n"
+      "The author worked on writing short stories and programming, particularly on an IBM 1401 computer in 9th grade using an early version of Fortran. Later on, the author got a microcomputer kit and started programming on a TRS-80, writing simple games and a word processor.\n"
      ]
     }
    ],
@@ -794,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "afb429af-c928-48e1-ac80-28687aa0e24c",
    "metadata": {},
    "outputs": [
@@ -824,6 +815,294 @@
     "    print(\"file_name\", node.metadata[\"file_name\"])\n",
     "    # print(\"text\", node.text) # テキストを確認したい場合、ココを実行して出力を確認\n",
     "    print(\"------------------------------------------------------\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ce1e648-6003-4ea7-aa52-afd4c691c2de",
+   "metadata": {},
+   "source": [
+    "### Evaluation\n",
+    "[共通](#共通)で説明したLoading、Indexing、Storing、Queryingの続き。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3c780b6-4aec-4b14-a235-54711927e004",
+   "metadata": {},
+   "source": [
+    "#### 準備"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "922d306e-ff20-4d40-a6ee-9e65baa81398",
+   "metadata": {},
+   "source": [
+    "##### クエリを固定し評価用LLMを生成"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a1174c67-c19d-4933-be29-26685a097cbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"What did the author do growing up?\"\n",
+    "llm = OpenAI(model=\"gpt-4\", temperature=0.0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f20d3e66-96a6-43e1-9430-e43e86b5fd6b",
+   "metadata": {},
+   "source": [
+    "##### 非同期実行のおまじない"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "f44f5efc-013d-4e3f-99c0-412a12a6d9f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59f2b74f-915c-442b-9a47-e32e165e7820",
+   "metadata": {},
+   "source": [
+    "#### 関連評価\n",
+    "リクエストとレスポンスの関連を評価"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "18991463-5efd-4893-94ec-a9328d848295",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "query: What did the author do growing up?\n",
+      "response: The author worked on writing short stories and programming, particularly on an IBM 1401 in 9th grade using an early version of Fortran. Later, with the advent of microcomputers, the author began programming on a TRS-80 and wrote simple games, a rocket prediction program, and a word processor.\n",
+      "score: 1.0\n",
+      "passing: True\n",
+      "feedback: YES\n",
+      "invalid_result: False\n",
+      "invalid_reason: None\n",
+      "pairwise_source: None\n"
+     ]
+    }
+   ],
+   "source": [
+    "from llama_index.core.evaluation import RelevancyEvaluator\n",
+    "\n",
+    "# define evaluator\n",
+    "evaluator = RelevancyEvaluator(llm=llm)\n",
+    "\n",
+    "# query index\n",
+    "query_engine = index.as_query_engine()\n",
+    "response = query_engine.query(query)\n",
+    "\n",
+    "# evaluate response\n",
+    "relevancy_eval_result = evaluator.evaluate_response(query=query, response=response)\n",
+    "print(\"query: \"           + str(relevancy_eval_result.query))\n",
+    "print(\"response: \"        + str(relevancy_eval_result.response))\n",
+    "print(\"score: \"           + str(relevancy_eval_result.score))\n",
+    "print(\"passing: \"         + str(relevancy_eval_result.passing))         # バイナリ評価結果（合格か不合格か）\t\n",
+    "print(\"feedback: \"        + str(relevancy_eval_result.feedback))        # フィードバックまたは回答の理由\n",
+    "print(\"invalid_result: \"  + str(relevancy_eval_result.invalid_result))  # 評価結果が無効かどうか。\t\n",
+    "print(\"invalid_reason: \"  + str(relevancy_eval_result.invalid_reason))  # 無効な評価の理由。\n",
+    "print(\"pairwise_source: \" + str(relevancy_eval_result.pairwise_source)) # "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15f34c37-80dd-4fab-ad81-64efa82f025b",
+   "metadata": {},
+   "source": [
+    "##### contexts\n",
+    "出力させると長いので概要だけ説明すると、  \n",
+    "質問（\"What did the author do growing up?\"）  \n",
+    "に関係するRAGのチャンクが抜き出されている。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7660ee2-4c78-4029-be35-c1f1dec3d56e",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "#print(\"contexts: \" + str(relevancy_eval_result.contexts))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf819825-2d88-4a3a-bd2e-952926d54d94",
+   "metadata": {},
+   "source": [
+    "#### 回答評価\n",
+    "応答は（RAGによって）取得したコンテキストと一致しているか？"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79c9ff5e-03e5-4d01-ae33-52a50bb79ffe",
+   "metadata": {},
+   "source": [
+    "##### 実際の実行"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b81c5a0d-73d0-421e-b521-efb2140bcd9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "query: None\n",
+      "response: The author worked on writing short stories and programming, particularly on an IBM 1401 in 9th grade using an early version of Fortran. Later, the author transitioned to working with microcomputers, building simple games and a word processor on a TRS-80.\n",
+      "score: 1.0\n",
+      "passing: True\n",
+      "feedback: YES\n",
+      "invalid_result: False\n",
+      "invalid_reason: None\n",
+      "pairwise_source: None\n"
+     ]
+    }
+   ],
+   "source": [
+    "from llama_index.core.evaluation import FaithfulnessEvaluator\n",
+    "\n",
+    "# define evaluator\n",
+    "evaluator = FaithfulnessEvaluator(llm=llm)\n",
+    "\n",
+    "# query index\n",
+    "query_engine = index.as_query_engine()\n",
+    "response = query_engine.query(query)\n",
+    "\n",
+    "# evaluate response\n",
+    "response_eval_result = evaluator.evaluate_response(response=response)\n",
+    "print(\"query: \"           + str(response_eval_result.query))\n",
+    "print(\"response: \"        + str(response_eval_result.response))\n",
+    "print(\"score: \"           + str(response_eval_result.score))\n",
+    "print(\"passing: \"         + str(response_eval_result.passing))         # バイナリ評価結果（合格か不合格か）\t\n",
+    "print(\"feedback: \"        + str(response_eval_result.feedback))        # フィードバックまたは回答の理由\n",
+    "print(\"invalid_result: \"  + str(response_eval_result.invalid_result))  # 評価結果が無効かどうか。\t\n",
+    "print(\"invalid_reason: \"  + str(response_eval_result.invalid_reason))  # 無効な評価の理由。\n",
+    "print(\"pairwise_source: \" + str(response_eval_result.pairwise_source)) # "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfdca7fd-c2ac-4d01-ba86-d8b8a3bc2406",
+   "metadata": {},
+   "source": [
+    "##### contexts\n",
+    "出力させると長いので概要だけ説明すると、  \n",
+    "質問（\"What did the author do growing up?\"）  \n",
+    "に関係するRAGのチャンクが抜き出されている。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e11a14b0-7043-4d67-89b9-bb1344c5cd7c",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "#print(\"contexts: \" + str(response_eval_result.contexts))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a37ddfa8-dc9e-45c6-82f9-4f8cedac1e59",
+   "metadata": {},
+   "source": [
+    "#### 検索評価\n",
+    "RAGによって取得されたソースはクエリに関連しているか？（先に使用した `retriever` を再利用）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "9f32a27e-f129-40a4-8e76-a0ff5d6407f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "query: What did the author do growing up?\n",
+      "expected_ids: ['node_id1', 'node_id2']\n",
+      "expected_texts: None\n",
+      "retrieved_ids: ['ef903a82-4999-448a-b007-452ab00100d5', '4aa4469e-4ece-4418-94ac-3a824149c490', '79ed1d41-9d29-424d-982f-c33a4358bd0d']\n",
+      "mode: RetrievalEvalMode.TEXT\n",
+      "metric_dict: {'mrr': RetrievalMetricResult(score=0.0, metadata={}), 'hit_rate': RetrievalMetricResult(score=0.0, metadata={})}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from llama_index.core.evaluation import RetrieverEvaluator\n",
+    "\n",
+    "# define evaluator\n",
+    "# hit_rate: 取得した上位k個のコンテキスト内に正しい答えが含まれている割合を計算\n",
+    "# mrr: 応答のリストを正解確率順に並べたプロセスを評価する統計的尺度（平均逆順位）\n",
+    "retriever_evaluator = RetrieverEvaluator.from_metric_names(\n",
+    "    [\"mrr\", \"hit_rate\"], retriever=retriever\n",
+    ")\n",
+    "\n",
+    "# query index\n",
+    "retrieval_eval_result = retriever_evaluator.evaluate(\n",
+    "    query=query,\n",
+    "    expected_ids=[\"node_id1\", \"node_id2\"]\n",
+    ")\n",
+    "\n",
+    "# evaluate response\n",
+    "response_eval_result = evaluator.evaluate_response(response=response)\n",
+    "print(\"query: \"           + str(retrieval_eval_result.query))\n",
+    "print(\"expected_ids: \"    + str(retrieval_eval_result.expected_ids))\n",
+    "print(\"expected_texts: \"  + str(retrieval_eval_result.expected_texts))\n",
+    "print(\"retrieved_ids: \"   + str(retrieval_eval_result.retrieved_ids))\n",
+    "print(\"mode: \"            + str(retrieval_eval_result.mode))\n",
+    "print(\"metric_dict: \"     + str(retrieval_eval_result.metric_dict))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "311d727c-8a60-45f3-a36e-eaff786e4bd5",
+   "metadata": {},
+   "source": [
+    "##### retrieved_texts\n",
+    "出力させると長いので概要だけ説明すると、  \n",
+    "質問（\"What did the author do growing up?\"）  \n",
+    "に関係するRAGのチャンクが抜き出されている。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c870075-acd7-4c87-a0e6-dec574b10ea1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(\"retrieved_texts: \" + str(retrieval_eval_result.retrieved_texts))"
    ]
   },
   {
@@ -863,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "id": "cb1325b7-caf2-4eea-850d-cd6ad95367e0",
    "metadata": {},
    "outputs": [],
@@ -891,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "id": "964620e0-90be-476e-89a1-eca273e5ab8f",
    "metadata": {},
    "outputs": [],
@@ -911,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "id": "9e75281c-90db-4300-b675-20977629f965",
    "metadata": {},
    "outputs": [],
@@ -969,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "id": "83c24974-e254-4589-98a4-43cc0a6fb5f9",
    "metadata": {},
    "outputs": [],
@@ -1009,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "id": "3e1b05a3-8896-40a9-a3a7-4324427515c1",
    "metadata": {},
    "outputs": [
@@ -1017,7 +1296,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The meaning of life is a philosophical question that has been debated for centuries and varies depending on individual beliefs, values, and perspectives.\n"
+      "The meaning of life is a philosophical question that has been debated for centuries by various thinkers and scholars.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python3.10/runpy.py\", line 196, in _run_module_as_main\n",
+      "    return _run_code(code, main_globals, None,\n",
+      "  File \"/usr/lib/python3.10/runpy.py\", line 86, in _run_code\n",
+      "    exec(code, run_globals)\n",
+      "  File \"/home/seigi/.local/lib/python3.10/site-packages/ipykernel_launcher.py\", line 18, in <module>\n",
+      "    app.launch_new_instance()\n",
+      "  File \"/home/seigi/.local/lib/python3.10/site-packages/traitlets/config/application.py\", line 1075, in launch_instance\n",
+      "    app.start()\n",
+      "  File \"/home/seigi/.local/lib/python3.10/site-packages/ipykernel/kernelapp.py\", line 739, in start\n",
+      "    self.io_loop.start()\n",
+      "  File \"/home/seigi/.local/lib/python3.10/site-packages/tornado/platform/asyncio.py\", line 205, in start\n",
+      "    self.asyncio_loop.run_forever()\n",
+      "  File \"/usr/lib/python3.10/asyncio/base_events.py\", line 603, in run_forever\n",
+      "    self._run_once()\n",
+      "  File \"/usr/lib/python3.10/asyncio/base_events.py\", line 1894, in _run_once\n",
+      "    handle = self._ready.popleft()\n",
+      "IndexError: pop from an empty deque\n"
      ]
     }
    ],
