--- a/Notebook/Jupyter/path/TableOfContents.ipynb
+++ b/Notebook/Jupyter/path/TableOfContents.ipynb
@@ -584,7 +584,25 @@
    "id": "431d38ad-1915-4520-8823-3a2e94b6bb88",
    "metadata": {},
    "source": [
-    "### [LLM_Ollama](LLM_Ollama.ipynb)"
+    "### Ollama\n",
+    "ローカル環境で大規模言語モデル（LLM）を簡単に実行できるツール／プラットフォーム"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "661d05b3-67a4-47ba-ac9e-53d730519d21",
+   "metadata": {},
+   "source": [
+    "#### [LLM_Ollama1](LLM_Ollama.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "926560d6-2498-4570-90cd-9a6b16b0bc93",
+   "metadata": {},
+   "source": [
+    "### LlamaIndex\n",
+    "大規模言語モデル（LLM）を外部データに簡単に接続するためのPythonライブラリ"
    ]
   },
   {
@@ -592,7 +610,8 @@
    "id": "c10ed3fa-a1c5-405f-b2c5-788e61dd764e",
    "metadata": {},
    "source": [
-    "### [LLM_LlamaIndex1](LLM_LlamaIndex1.ipynb)"
+    "#### [LLM_LlamaIndex1](LLM_LlamaIndex1.ipynb)\n",
+    "LlamaIndexでRAG（ベクトル検索）"
    ]
   },
   {
@@ -600,7 +619,35 @@
    "id": "c7694bba-bcd7-420c-ab00-16d569ad1d66",
    "metadata": {},
    "source": [
-    "### [LLM_LlamaIndex2](LLM_LlamaIndex2.ipynb)"
+    "#### [LLM_LlamaIndex2](LLM_LlamaIndex2.ipynb)\n",
+    "LlamaIndexでGraph RAG"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd2a88d1-37ea-4550-bcea-59bfcee25fbd",
+   "metadata": {},
+   "source": [
+    "#### [LLM_LlamaIndex3](LLM_LlamaIndex3.ipynb)\n",
+    "LlamaIndexでAgent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fb3bfb8-4949-40cc-aa78-1183cba1001a",
+   "metadata": {},
+   "source": [
+    "#### [LLM_LlamaIndex4](LLM_LlamaIndex4.ipynb)\n",
+    "LlamaIndexでWorkflows"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c3334f1-7128-401d-8265-2ccc5dde6520",
+   "metadata": {},
+   "source": [
+    "#### [LLM_LlamaIndex5](LLM_LlamaIndex5.ipynb)\n",
+    "LlamaIndexによるWikiダンプからの情報抽出プロンプトフロー"
    ]
   },
   {
@@ -683,10 +730,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "027865be-f840-4658-a049-bf09ff4ee185",
+   "metadata": {},
+   "source": [
+    "#### CNN、RNN、DRL、他"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e16b84c7-1d48-458d-878b-ff66f38ff69c",
    "metadata": {},
    "source": [
-    "#### [深層学習についてのレポート（CNN編）](https://1drv.ms/p/s!Amfs5caPP9r5jlAZEt6cg2zg_2cU)"
+    "##### [深層学習についてのレポート（CNN編）](https://1drv.ms/p/s!Amfs5caPP9r5jlAZEt6cg2zg_2cU)"
    ]
   },
   {
@@ -694,23 +749,7 @@
    "id": "c5ae9d7a-81ba-4250-881f-f2491ccb3b36",
    "metadata": {},
    "source": [
-    "#### [深層学習についてのレポート（RNN編）](https://1drv.ms/p/s!Amfs5caPP9r5jzVgO9xfbO2sbvkF)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "954f662e-f9e2-49b6-bab0-b0012d1dca60",
-   "metadata": {},
-   "source": [
-    "#### [深層学習についてのレポート（LLM編）](https://1drv.ms/p/s!Amfs5caPP9r5kAtLiKqOHge-zTzs)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2d7e627b-fc2e-4418-9668-d9c19e475f66",
-   "metadata": {},
-   "source": [
-    "#### [深層学習についてのレポート（画像系、CNN画像認識以外）](https://1drv.ms/p/s!Amfs5caPP9r5kB89Bt35mRcy_utY)"
+    "##### [深層学習についてのレポート（RNN編）](https://1drv.ms/p/s!Amfs5caPP9r5jzVgO9xfbO2sbvkF)"
    ]
   },
   {
@@ -718,7 +757,15 @@
    "id": "a68cf652-3d20-4c86-9a28-6f3536cff8a4",
    "metadata": {},
    "source": [
-    "#### [深層学習についてのレポート（強化学習、深層強化学習）](https://1drv.ms/p/s!Amfs5caPP9r5kDBBIzKQ-QAF1tWl)"
+    "##### [深層学習についてのレポート（強化学習、深層強化学習）](https://1drv.ms/p/s!Amfs5caPP9r5kDBBIzKQ-QAF1tWl)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d7e627b-fc2e-4418-9668-d9c19e475f66",
+   "metadata": {},
+   "source": [
+    "##### [深層学習についてのレポート（画像系、CNN画像認識以外）](https://1drv.ms/p/s!Amfs5caPP9r5kB89Bt35mRcy_utY)"
    ]
   },
   {
@@ -728,7 +775,39 @@
     "tags": []
    },
    "source": [
-    "### 活用レポート"
+    "### 言語モデル系"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e2f0bf8-585e-4f63-a32a-32f6ad8c0707",
+   "metadata": {},
+   "source": [
+    "#### 技術レポート"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b98d78db-d02a-422e-a749-999ab9f7a2e0",
+   "metadata": {},
+   "source": [
+    "##### [深層学習についてのレポート（LLM編）](https://1drv.ms/p/s!Amfs5caPP9r5kAtLiKqOHge-zTzs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "018b4425-082b-4914-93e2-db71cac582b4",
+   "metadata": {},
+   "source": [
+    "##### [LLMプロンプトエンジニアリング](https://1drv.ms/p/s!Amfs5caPP9r5kAtLiKqOHge-zTzs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abe2d280-eb27-491b-a8f4-0a1169c5f048",
+   "metadata": {},
+   "source": [
+    "#### 活用レポート"
    ]
   },
   {
@@ -736,7 +815,7 @@
    "id": "99e079a5-bcc1-428d-ac2b-2bb12f117952",
    "metadata": {},
    "source": [
-    "#### [学びをサポートするAI活用のAS-ISとTO-BE](https://1drv.ms/p/s!Amfs5caPP9r5kAxog0vFyvOF_zsi)"
+    "##### [学びをサポートするAI活用のAS-ISとTO-BE](https://1drv.ms/p/s!Amfs5caPP9r5kAxog0vFyvOF_zsi)"
    ]
   },
   {
@@ -744,7 +823,7 @@
    "id": "4ca34653-0ada-457d-a59d-d9047ce29730",
    "metadata": {},
    "source": [
-    "#### [リサーチをサポートするAI活用のAS-ISとTO-BE](https://1drv.ms/p/s!Amfs5caPP9r5kB29-FBGDhVDl0RR)"
+    "##### [リサーチをサポートするAI活用のAS-ISとTO-BE](https://1drv.ms/p/s!Amfs5caPP9r5kB29-FBGDhVDl0RR)"
    ]
   }
  ],
@@ -764,7 +843,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
