--- a/Notebook/Jupyter/path/TableOfContents.ipynb
+++ b/Notebook/Jupyter/path/TableOfContents.ipynb
@@ -655,7 +655,16 @@
    "id": "6382fe89-0d5d-41d8-afbb-154267510baa",
    "metadata": {},
    "source": [
-    "### [LLM_Fine-tuning](LLM_Fine-tuning.ipynb)"
+    "### LLM_Fine-tuning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db2f10b2-e1e5-4fa6-8f86-14f92e4704db",
+   "metadata": {},
+   "source": [
+    "#### [LLM_Fine-tuning](LLM_Fine-tuning1.ipynb)\n",
+    "[PhiCookBook/code/04.Finetuning/Phi-3-finetune-lora-python.ipynb](https://github.com/microsoft/PhiCookBook/blob/main/code/04.Finetuning/Phi-3-finetune-lora-python.ipynb)をやってみる。"
    ]
   },
   {
