--- a/Notebook/Jupyter/path/LLM_Fine-tuning1.ipynb
+++ b/Notebook/Jupyter/path/LLM_Fine-tuning1.ipynb
@@ -73,6 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# そんな簡単にインストールできないのでバラして実行\n",
     "!pip install --upgrade bitsandbytes\n",
     "!pip install --upgrade transformers\n",
     "!pip install --upgrade peft\n",
@@ -85,10 +86,89 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9d2e7166-aa77-4b41-9069-afc805a277f4",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# CUDAインストール環境にインストール\n",
+    "# pipとsetuptoolsをアップグレード\n",
+    "!pip install --upgrade pip setuptools\n",
+    "\n",
+    "# --no-build-isolationは、この事前ビルド済みのものをダウンロードしてきてインストール\n",
+    "# 環境内のPython/CUDA/PyTorchなどのバージョンをチェックして選択している模様\n",
+    "# !pip install flash_attn --no-build-isolation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85fd4ca4-a363-4214-bd49-494c5fa39b3e",
+   "metadata": {},
+   "source": [
+    "### 様々な問題対応\n",
+    "ビルドを並列実行する方法と、ビルド済みのものを持ってくる方法があるらしい。\n",
+    "\n",
+    "#### ビルドを並列実行する方法\n",
+    "- [bug] build is verrrrrrrrrrrrrrrrrrrry slow · Issue #945 · Dao-AILab/flash-attention  \n",
+    "https://github.com/Dao-AILab/flash-attention/issues/945\n",
+    "```bash\n",
+    "$ top -d 10\n",
+    "top - 06:28:47 up  3:37,  2 users,  load average: 1.99, 2.01, 2.01\n",
+    "Tasks: 306 total,   3 running, 303 sleeping,   0 stopped,   0 zombie\n",
+    "%Cpu(s): 25.6 us,  0.3 sy,  0.0 ni, 74.1 id,  0.0 wa,  0.0 hi,  0.0 si,  0.0 st \n",
+    "MiB Mem :  56191.6 total,  43355.9 free,   8707.5 used,   4902.0 buff/cache     \n",
+    "MiB Swap:      0.0 total,      0.0 free,      0.0 used.  47484.1 avail Mem \n",
+    "\n",
+    "    PID USER      PR  NI    VIRT    RES    SHR S  %CPU  %MEM     TIME+ COMMAND                               \n",
+    "   7944 seigi     20   0 7618672   1.8g  38648 R 100.0   3.3   2:52.44 cicc                                  \n",
+    "   7945 seigi     20   0 7618672   1.8g  38656 R 100.0   3.3   2:52.42 cicc                                  \n",
+    "   2657 xrdp      20   0   40156  28668   8856 S   2.6   0.0   1:31.88 xrdp                                  \n",
+    "   1854 seigi     20   0  485348 184864  87076 S   1.0   0.3   0:38.83 Xorg  \n",
+    "```\n",
+    "- CUDAプログラムのビルド中。ciccプロセスがCPUをフルに使っているが、全体としてCPUにもメモリにもまだ余裕がある。\n",
+    "- ロードアベレージは高め（2.0以上）、コア数が2以上あるなら並列数を上げると良い可能性がある。\n",
+    "- `export MAX_JOBS=N`で、ninjaビルドシステムが使用できる CPU コアを指定することができるらしい。\n",
+    "- `Standard_NC8as_T4_v3`のvCPU数は8らしい。`lscpu`で`CPU(s):8`、`On-line CPU(s) list:0-7`\n",
+    "```bash\n",
+    "!pip install packaging\n",
+    "!pip install ninja\n",
+    "!MAX_JOBS=8 pip install flash-attn --no-build-isolation\n",
+    "```\n",
+    "#### ビルド済みのものを持ってくる方法\n",
+    "- ColaboratoryでFlashAttentionをインストールするとめちゃめちゃ時間がかかっていた（過去）  \n",
+    "https://zenn.dev/kun432/scraps/98b51455d20927\n",
+    "  - https://x.com/mjun0812/status/1850706663982137615\n",
+    "  - https://github.com/mjun0812/flash-attention-prebuild-wheels\n",
+    "  - https://github.com/kun432/flash-attention-prebuild-wheels\n",
+    "```bash\n",
+    "pip install https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.1.0/flash_attn-2.7.4+cu128torch2.7-cp312-cp312-linux_x86_64.whl\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a094d3b-2b1d-48d4-a59d-c4dfb7c79be1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --upgrade flash_attn"
+    "# \n",
+    "!pip install packaging\n",
+    "!pip install ninja\n",
+    "# \n",
+    "!pip cache purge\n",
+    "!mkdir -p $mnt/tmp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebb731a2-362c-46da-9b42-dce712939efc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 「error: [Errno 28] No space left on device」の様なエラーになったので「TMPDIR」を追加\n",
+    "!TMPDIR=$mnt/tmp MAX_JOBS=4 pip install flash-attn --no-build-isolation"
    ]
   },
   {
@@ -100,16 +180,6 @@
    "source": [
     "!pip install --upgrade torch\n",
     "!pip install --upgrade wandb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2fc7e02-9076-43e9-8875-8f03469e95de",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip list"
    ]
   },
   {
@@ -157,10 +227,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "500e7d07-4341-4c7b-b57f-157baee2b7a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "transformers              4.52.3\n"
+     ]
+    }
+   ],
    "source": [
     "# This command is used to list all installed Python packages and filter for the 'transformers' package.\n",
     "# The '!' at the beginning allows us to run shell commands in the notebook.\n",
@@ -178,6 +256,198 @@
     "# So, this command will list details of the 'transformers' package if it's installed.\n",
     "# つまり、このコマンドを実行すると、'transformers' パッケージがインストールされている場合、その詳細が表示される。\n",
     "!pip list | grep transformers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b2fc7e02-9076-43e9-8875-8f03469e95de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Package                   Version\n",
+      "------------------------- --------------\n",
+      "absl-py                   2.2.2\n",
+      "accelerate                1.7.0\n",
+      "aiohappyeyeballs          2.6.1\n",
+      "aiohttp                   3.11.18\n",
+      "aiosignal                 1.3.2\n",
+      "annotated-types           0.7.0\n",
+      "anyio                     4.9.0\n",
+      "argon2-cffi               23.1.0\n",
+      "argon2-cffi-bindings      21.2.0\n",
+      "arrow                     1.3.0\n",
+      "asttokens                 3.0.0\n",
+      "async-lru                 2.0.5\n",
+      "attrs                     25.3.0\n",
+      "babel                     2.17.0\n",
+      "beautifulsoup4            4.13.4\n",
+      "bitsandbytes              0.45.5\n",
+      "bleach                    6.2.0\n",
+      "certifi                   2025.4.26\n",
+      "cffi                      1.17.1\n",
+      "charset-normalizer        3.4.2\n",
+      "click                     8.2.1\n",
+      "comm                      0.2.2\n",
+      "datasets                  3.6.0\n",
+      "debugpy                   1.8.14\n",
+      "decorator                 5.2.1\n",
+      "defusedxml                0.7.1\n",
+      "dill                      0.3.8\n",
+      "docker-pycreds            0.4.0\n",
+      "einops                    0.8.1\n",
+      "executing                 2.2.0\n",
+      "fastjsonschema            2.21.1\n",
+      "filelock                  3.13.1\n",
+      "flash_attn                2.7.4.post1\n",
+      "fqdn                      1.5.1\n",
+      "frozenlist                1.6.0\n",
+      "fsspec                    2024.6.1\n",
+      "gitdb                     4.0.12\n",
+      "GitPython                 3.1.44\n",
+      "h11                       0.16.0\n",
+      "httpcore                  1.0.9\n",
+      "httpx                     0.28.1\n",
+      "huggingface-hub           0.31.4\n",
+      "idna                      3.10\n",
+      "ipykernel                 6.29.5\n",
+      "ipython                   9.2.0\n",
+      "ipython_pygments_lexers   1.1.1\n",
+      "ipywidgets                8.1.7\n",
+      "isoduration               20.11.0\n",
+      "jedi                      0.19.2\n",
+      "Jinja2                    3.1.4\n",
+      "joblib                    1.5.1\n",
+      "json5                     0.12.0\n",
+      "jsonpointer               3.0.0\n",
+      "jsonschema                4.23.0\n",
+      "jsonschema-specifications 2025.4.1\n",
+      "jupyter                   1.1.1\n",
+      "jupyter_client            8.6.3\n",
+      "jupyter-console           6.6.3\n",
+      "jupyter_core              5.7.2\n",
+      "jupyter-events            0.12.0\n",
+      "jupyter-lsp               2.2.5\n",
+      "jupyter_server            2.16.0\n",
+      "jupyter_server_terminals  0.5.3\n",
+      "jupyterlab                4.4.2\n",
+      "jupyterlab_pygments       0.3.0\n",
+      "jupyterlab_server         2.27.3\n",
+      "jupyterlab_widgets        3.0.15\n",
+      "markdown-it-py            3.0.0\n",
+      "MarkupSafe                2.1.5\n",
+      "matplotlib-inline         0.1.7\n",
+      "mdurl                     0.1.2\n",
+      "mistune                   3.1.3\n",
+      "mpmath                    1.3.0\n",
+      "multidict                 6.4.4\n",
+      "multiprocess              0.70.16\n",
+      "nbclient                  0.10.2\n",
+      "nbconvert                 7.16.6\n",
+      "nbformat                  5.10.4\n",
+      "nest-asyncio              1.6.0\n",
+      "networkx                  3.3\n",
+      "ninja                     1.11.1.4\n",
+      "nltk                      3.9.1\n",
+      "notebook                  7.4.2\n",
+      "notebook_shim             0.2.4\n",
+      "numpy                     2.1.2\n",
+      "nvidia-cublas-cu12        12.8.3.14\n",
+      "nvidia-cuda-cupti-cu12    12.8.57\n",
+      "nvidia-cuda-nvrtc-cu12    12.8.61\n",
+      "nvidia-cuda-runtime-cu12  12.8.57\n",
+      "nvidia-cudnn-cu12         9.7.1.26\n",
+      "nvidia-cufft-cu12         11.3.3.41\n",
+      "nvidia-cufile-cu12        1.13.0.11\n",
+      "nvidia-curand-cu12        10.3.9.55\n",
+      "nvidia-cusolver-cu12      11.7.2.55\n",
+      "nvidia-cusparse-cu12      12.5.7.53\n",
+      "nvidia-cusparselt-cu12    0.6.3\n",
+      "nvidia-nccl-cu12          2.26.2\n",
+      "nvidia-nvjitlink-cu12     12.8.61\n",
+      "nvidia-nvtx-cu12          12.8.55\n",
+      "overrides                 7.7.0\n",
+      "packaging                 25.0\n",
+      "pandas                    2.2.3\n",
+      "pandocfilters             1.5.1\n",
+      "parso                     0.8.4\n",
+      "peft                      0.15.2\n",
+      "pexpect                   4.9.0\n",
+      "pillow                    11.0.0\n",
+      "pip                       25.1.1\n",
+      "platformdirs              4.3.8\n",
+      "prometheus_client         0.22.0\n",
+      "prompt_toolkit            3.0.51\n",
+      "propcache                 0.3.1\n",
+      "protobuf                  6.31.0\n",
+      "psutil                    7.0.0\n",
+      "ptyprocess                0.7.0\n",
+      "pure_eval                 0.2.3\n",
+      "pyarrow                   20.0.0\n",
+      "pycparser                 2.22\n",
+      "pydantic                  2.11.5\n",
+      "pydantic_core             2.33.2\n",
+      "Pygments                  2.19.1\n",
+      "python-dateutil           2.9.0.post0\n",
+      "python-dotenv             1.1.0\n",
+      "python-json-logger        3.3.0\n",
+      "pytz                      2025.2\n",
+      "PyYAML                    6.0.2\n",
+      "pyzmq                     26.4.0\n",
+      "referencing               0.36.2\n",
+      "regex                     2024.11.6\n",
+      "requests                  2.32.3\n",
+      "rfc3339-validator         0.1.4\n",
+      "rfc3986-validator         0.1.1\n",
+      "rich                      14.0.0\n",
+      "rouge_score               0.1.2\n",
+      "rpds-py                   0.25.1\n",
+      "safetensors               0.5.3\n",
+      "Send2Trash                1.8.3\n",
+      "sentry-sdk                2.29.1\n",
+      "setproctitle              1.3.6\n",
+      "setuptools                80.8.0\n",
+      "six                       1.17.0\n",
+      "smmap                     5.0.2\n",
+      "sniffio                   1.3.1\n",
+      "soupsieve                 2.7\n",
+      "stack-data                0.6.3\n",
+      "sympy                     1.13.3\n",
+      "terminado                 0.18.1\n",
+      "tinycss2                  1.4.0\n",
+      "tokenizers                0.21.1\n",
+      "torch                     2.7.0+cu128\n",
+      "torchaudio                2.7.0+cu128\n",
+      "torchvision               0.22.0+cu128\n",
+      "tornado                   6.5.1\n",
+      "tqdm                      4.67.1\n",
+      "traitlets                 5.14.3\n",
+      "transformers              4.52.3\n",
+      "triton                    3.3.0\n",
+      "trl                       0.17.0\n",
+      "types-python-dateutil     2.9.0.20250516\n",
+      "typing_extensions         4.12.2\n",
+      "typing-inspection         0.4.1\n",
+      "tzdata                    2025.2\n",
+      "uri-template              1.3.0\n",
+      "urllib3                   2.4.0\n",
+      "wandb                     0.19.11\n",
+      "wcwidth                   0.2.13\n",
+      "webcolors                 24.11.1\n",
+      "webencodings              0.5.1\n",
+      "websocket-client          1.8.0\n",
+      "widgetsnbextension        4.0.14\n",
+      "xxhash                    3.5.0\n",
+      "yarl                      1.20.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# インストールされたパッケージを確認する。\n",
+    "!pip list"
    ]
   },
   {
