--- a/Notebook/Jupyter/path/LLM_Fine-tuning1.ipynb
+++ b/Notebook/Jupyter/path/LLM_Fine-tuning1.ipynb
@@ -152,10 +152,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# \n",
+    "# ローカルでのビルドに必要とされるモジュールをインストールする。\n",
     "!pip install packaging\n",
     "!pip install ninja\n",
-    "# \n",
+    "# 「error: [Errno 28] No space left on device」の様なエラーになったので「TMPDIR」を追加\n",
     "!pip cache purge\n",
     "!mkdir -p $mnt/tmp"
    ]
@@ -167,7 +167,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 「error: [Errno 28] No space left on device」の様なエラーになったので「TMPDIR」を追加\n",
+    "# 「TMPDIR」と「MAX_JOBS」を指定し、--no-build-isolationオプションを指定して実行\n",
+    "# pipでインストールする際にビルドプロセスを分離しないようにするためのオプションらしい。\n",
     "!TMPDIR=$mnt/tmp MAX_JOBS=4 pip install flash-attn --no-build-isolation"
    ]
   },
@@ -178,6 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 引き続きのインストール\n",
     "!pip install --upgrade torch\n",
     "!pip install --upgrade wandb"
    ]
